--- a/ trade_supertrend_SOXL.ipynb
+++ b/ trade_supertrend_SOXL.ipynb
@@ -10,9 +10,9 @@
         "\n",
         "## 🦸‍♂️ SOXL ETF trading advanced Machine Learning techniques\n",
         "\n",
-        "GOAL: predict and place SOXL profitable trades in backtest\n",
+        "**Problem:** Can this ML implementation predict and place SOXL profitable trades in backtest?\n",
         "\n",
-        "**Project Overview and Goals:** This capstone project implements an advanced machine learning-enhanced trading strategy that combines SuperTrend technical indicators with ensemble ML models to predict profitable trading opportunities in volatile markets. The goal is to develop a systematic trading strategy that can consistently generate positive returns while managing risk through ML-based signal enhancement and dynamic position sizing.\n",
+        "**Project Overview:** This capstone project implements an advanced machine learning-enhanced trading strategy that combines SuperTrend technical indicators with ensemble ML models to predict profitable trading opportunities in volatile markets. The goal is to develop a systematic trading strategy that can consistently generate positive returns while managing risk through ML-based signal enhancement and dynamic position sizing.\n",
         "\n",
         "**Key Findings:** The best performing strategy is the ML-enhanced SuperTrend approach using SOXL (3x leveraged ETF) on 5-minute timeframes, achieving 25-35% annual returns with a Sharpe ratio of 2.4. The ensemble ML approach (XGBoost, LightGBM, Random Forest, LSTM) provides 15-25% improvement over baseline SuperTrend strategy, with an expected value of $45-75 per trade.\n",
         "\n",
